<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity2"
    android:background="#94DED6C2">

    <!-- GridLayout for Buttons -->
    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:rowCount="4"
        android:columnCount="2"
        android:alignmentMode="alignMargins"
        android:layout_gravity="center">

        <!-- Department Buttons -->
        <Button
            android:id="@+id/csbsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/csbs"
            android:textSize="21sp"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#EB837D"/>

        <Button
            android:id="@+id/itButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/it"
            android:textSize="21sp"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#E8FF02"/>

        <Button
            android:id="@+id/cseButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:textSize="21sp"
            android:text="@string/cse"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#F4CF6B"/>

        <Button
            android:id="@+id/dsButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:textSize="21sp"
            android:text="@string/ds"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#FFC107"/>

        <!-- Rating Buttons -->
        <Button
            android:id="@+id/csbsRatingButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/show_csbs_ratings"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:textSize="21sp"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#EB837D"/>

        <Button
            android:id="@+id/itRatingButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/show_it_ratings"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:textSize="21sp"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#E6FB0F"/>

        <Button
            android:id="@+id/cseRatingButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/show_cse_ratings"
            android:background="@drawable/rounded_button"
            android:layout_rowWeight="1"
            android:textSize="21sp"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#F4CF6B"/>

        <Button

            android:id="@+id/dsRatingButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/show_ds_ratings"
            android:textSize="21sp"
            android:background="@drawable/rounded_button"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:padding="0dp"
            android:textColor="#FFC107"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
