<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#C7E7ED">

    <!-- Fixed EditText at the top -->
    <EditText
        android:id="@+id/editTextTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/teacher_details"
        android:padding="16dp"
        android:inputType="text"
        android:autofillHints="emailAddress"
        android:textColor="@android:color/black"
        android:importantForAccessibility="yes" />


    <GridLayout
        android:id="@+id/gridLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTeacher"
        android:layout_marginTop="16dp"
        android:rowCount="2"
        android:columnCount="2"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonAddTeacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/add_teacher"
            android:background="@color/buttonColorAdd"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:minWidth="0dp"
            android:maxWidth="150dp" />

        <Button
            android:id="@+id/buttonRemoveTeacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/remove_teacher"
            android:background="@color/buttonColorRemove"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:minWidth="0dp"
            android:maxWidth="150dp" />

        <Button
            android:id="@+id/buttonShowAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/show_all_data"
            android:background="@color/buttonColorShowAll"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:minWidth="0dp"
            android:maxWidth="150dp" />
    </GridLayout>


    <ScrollView
        android:layout_width="381dp"
        android:layout_height="242dp"
        android:layout_below="@id/gridLayoutButtons"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:textAlignment="center"
            android:textColor="#0505C8"
            android:textSize="18sp" />
    </ScrollView>

</RelativeLayout>
